# OMPy

./: .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp
src/: CMakeLists.txt  main.cpp  ompy.pxd  ompy.pyx  python_vars.h.in
src/ompy/: CMakeLists.txt  __init__.pyx  core.pxd  core.pyx  network.pxd  types.pxd
